--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-pandas==1.5.3
-matplotlib==3.7.1
-seaborn==0.12.2
-openai==0.27.0
-uvicorn==0.20.0
-tenacity
+pandas
+plotly
+requests
+python-dotenv
